<resources>

    <!--    Navigation-->
    <string name="app_name">Save a life</string>
    <string name="logo">Logo</string>

    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>

    <string name="SOS">SOS</string>
    <string name="posts">Posts</string>

    <!--    Buttons-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in_with">Sign in with :</string>

    <!--    Register-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="blood_type">Blood Type :</string>
    <string name="has_donated_QST">Have you donated before ?</string>

    <!--    Profile-->
    <string name="last_donation">Last Donation :</string>
    <string name="edit">Edit</string>
    <string name="history">History</string>

    <!--    New Post-->
    <string name="new_post">New Post</string>
    <string name="patient_name">Patient name :</string>
    <string name="city">City :</string>
    <string name="hospital">Hospital :</string>
    <string name="donation_center">Donation center :</string>
    <string name="details">Details :</string>
    <string name="not_specified">Not specified</string>
    <string name="enter_details">Enter your details here</string>

    <string name="posted">Posted the : </string>
    <string name="posted_by">Posted by : </string>
    <string name="i_donated">I have donated to this patient</string>
    <string name="i_donated_label">If you have donated to this patient please click below to confirm</string>
    <string name="i_donated_label_hasDonated">Please Wait until the 3 months has past to donate again</string>
    <string name="i_donated_label_not_authenticated">Please login to confirm donation</string>


    <!--    Notification-->
    <string name="SOS_notification_title">SOS ! Someone needs you !</string>
    <string name="SOS_notification_body">needs your blood, please save his life</string>
    <string name="SOS_notification_delimiter">needs</string>

    <string name="donation_notification_title">Thank you for your donation!</string>
    <string name="donation_notification_body_1">You have donated to</string>
    <string name="donation_notification_body_2">On behalf of this patient, we thank you for your noble initiative.</string>

    <string name="welcomeback_notification_title">Welcome back!</string>
    <string name="welcomeback_notification_body">You can donate now, please save a life</string>

<!--    Channels-->
    <string name="channel1_title">New SOS Post</string>
    <string name="channel1_description">When an user posts a new SOS in your subscribed Topic(city)</string>

    <string name="channel2_title">Donation</string>
    <string name="channel2_description">When you confirm a donation</string>

    <string name="channel3_title">You can donate</string>
    <string name="channel3_description">When the resting period is over and you can donate again (3 months after last donation)</string>


    <!--    Dialogs-->
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Are you sure you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="dialog_edit_title">Edit</string>

</resources>
