<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <!--White BG-->
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg_logo_radius"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"/>

        <!--Username-->
        <EditText
            android:id="@+id/login_username"
            style="@style/input_field"
            android:layout_marginTop="30dp"
            android:hint="@string/username"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/view"/>
        <!--Password-->
        <EditText
            android:id="@+id/login_password"
            style="@style/input_field"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_username"/>

        <Button
            android:id="@+id/login_login_btn"
            style="@style/button_big"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_password"/>

        <Button
            android:id="@+id/login_register_btn"
            style="@style/button_small"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/register"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_login_btn"/>

    </RelativeLayout>

</ScrollView>

