<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activities.WelcomeActivity">

        <!--White BG-->
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg_logo_radius"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Full name-->
        <TextView
            android:id="@+id/profile_username"
            style="@style/button_medium"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:text="test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />


<!--     username-->
        <TextView
            android:id="@+id/profile_city"
            style="@style/input_field"
            android:layout_marginTop="30dp"
            android:text="@string/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <!--bloodType-->
        <TextView
            android:id="@+id/profile_bloodType"
            style="@style/input_field"
            android:layout_marginTop="15dp"
            android:text="@string/blood_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_city" />

<!--        &lt;!&ndash;  username_EDIT&ndash;&gt;-->
<!--        <EditText-->
<!--            android:id="@+id/profile_city_edit"-->
<!--            style="@style/input_field"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:text="@string/city"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/view" />-->

<!--        &lt;!&ndash;  bloodType_EDIT&ndash;&gt;-->
<!--        <EditText-->
<!--            android:id="@+id/profile_bloodType_edit"-->
<!--            style="@style/input_field"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:text="@string/blood_type"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.495"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/profile_city" />-->

<!--    lastDonation_-->
        <TextView
            android:id="@+id/profile_lastDonation"
            style="@style/input_field"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/last_donation"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_bloodType" />


<!--    Buttons-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_lastDonation">

<!--            Edit btn-->
            <Button
                android:id="@+id/profile_edit_btn"
                style="@style/button_big"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_lastDonation" />
<!--            History Btn-->
            <Button
                android:id="@+id/profile_history_btn"
                style="@style/button_big"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_lastDonation" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/BottomNavigation" />

</RelativeLayout>
