<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PatientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/bg_history_text_area"
            android:minWidth="100dp"
            android:minHeight="100dp"
            android:src="@mipmap/ic_launcher_logo" />

        <!--Patient name-->
        <TextView
            android:id="@+id/patient_city"
            style="@style/button_big"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_article_header"
            android:gravity="center"
            android:text="Amine Fattas"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_article_text_area"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:layout_editor_absoluteX="20dp">


            <!--donation center-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/center_donation_label"
                    style="@style/post_titles"
                    android:layout_marginTop="8dp"
                    android:text="@string/donation_center" />

                <ImageView
                    android:id="@+id/center_donation_gps_btn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:layout_toRightOf="@id/center_donation_label"
                    android:src="@drawable/ic_location_marker"
                    android:tint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/patient_input_donation_center"
                    style="@style/input_field_mini"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/center_donation_gps_btn"
                    android:hint="@string/not_specified"
                    android:minHeight="40dp" />

            </RelativeLayout>

            <!--date    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/patient_date"
                    style="@style/input_field_mini" />

            </LinearLayout>


            <!--blood type-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/post_titles"
                    android:layout_width="100dp"
                    android:text="@string/blood_type" />

                <TextView
                    android:id="@+id/patient_input_bloodType"
                    style="@style/input_field_mini"
                    android:layout_width="100dp" />
            </LinearLayout>


            <!--details-->
            <TextView
                style="@style/post_titles"
                android:layout_marginTop="15dp"
                android:text="@string/details" />

            <TextView
                android:id="@+id/patient_input_details"
                style="@style/input_field_area"
                android:hint="No details" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
