<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.WelcomeActivity">

    <!--White BG-->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_logo_radius"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/welcome_login_btn"
        style="@style/button_big"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/welcome_home_btn"
        style="@style/button_big"
        android:layout_marginTop="20dp"
        android:text="@string/posts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_login_btn" />


<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        style="@style/input_field"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:text="@string/sign_in_with"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/welcome_home_btn" />-->

<!--&lt;!&ndash; google / FB buttons&ndash;&gt;-->
<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="160dp"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/textView2"-->
<!--        app:layout_constraintStart_toStartOf="@+id/textView2"-->
<!--        app:layout_constraintTop_toTopOf="@+id/textView2">-->

<!--        <ImageView-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:src="@drawable/google_logo" />-->

<!--        <ImageView-->
<!--            android:layout_width="60dp"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:src="@drawable/fb_logo" />-->
<!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>
